# ChangeLog for net-misc/spice-gtk
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/spice-gtk/ChangeLog,v 1.89 2014/10/11 15:54:20 klausman Exp $

  11 Oct 2014; Tobias Klausmann <klausman@gentoo.org> spice-gtk-0.25-r1.ebuild:
  Keyworded on alpha, bug 513108

  17 Aug 2014; Anthony G. Basile <blueness@gentoo.org> spice-gtk-0.25-r1.ebuild:
  Keyword ~ppc ~ppc64, bug #513108

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> spice-gtk-0.20-r1.ebuild,
  spice-gtk-0.21.ebuild, spice-gtk-0.25-r1.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*spice-gtk-0.25-r1 (10 Aug 2014)

  10 Aug 2014; Tiziano Müller <dev-zero@gentoo.org> +spice-gtk-0.25-r1.ebuild,
  -spice-gtk-0.25.ebuild:
  Rev.bump to pull in media-libs/opus to avoid automagic dep (bug #518546).

  24 Jul 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  spice-gtk-0.20-r1.ebuild, spice-gtk-0.21.ebuild, spice-gtk-0.25.ebuild:
  Swap virtual/udev[gudev] for virtual/libgudev, package does not seem to
  require libudev or udevd; bug 506034

  24 Jun 2014; Markus Meier <maekke@gentoo.org> spice-gtk-0.25.ebuild:
  add ~arm, bug #513108

*spice-gtk-0.25 (13 Jun 2014)

  13 Jun 2014; Tiziano Müller <dev-zero@gentoo.org>
  +files/spice-gtk-0.25-Do-not-depend-on-libsoup-directly.patch,
  +files/spice-gtk-0.25-Introduce-enable-disable-webdav-option.patch,
  +files/spice-gtk-0.25-missing_gio_libs.patch, +spice-gtk-0.25.ebuild,
  metadata.xml:
  Version bump (bug #492778), now depend on qemu[smartcard] for smartcard
  support (this obsoletes libcacard, see bug #491594), add WebDAV filesharing
  support via USE=webdav (and net-libs/phodav).

  11 Mar 2014; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due #239126

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> spice-gtk-0.21.ebuild:
  Stable for arm, wrt bug #488800

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> spice-gtk-0.21.ebuild:
  Stable for sparc, wrt bug #488800
