@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/spice-gtk/spice-gtk-0.21.ebuild,v 1.13 2014/08/10 20:47:46 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/spice-gtk/spice-gtk-0.21.ebuild,v 1.14 2014/12/28 18:00:09 floppym Exp $
 
 EAPI=5
 GCONF_DEBUG="no"
@@ -11,8 +11,6 @@ VALA_USE_DEPEND="vapigen"
 PYTHON_COMPAT=( python{2_6,2_7} )
 
 inherit eutils python-single-r1 vala
-
-PYTHON_DEPEND="2"
 
 DESCRIPTION="Set of GObject and Gtk objects for connecting to Spice servers and a client GUI"
 HOMEPAGE="http://spice-space.org http://gitorious.org/spice-gtk"
