@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/spice-gtk
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/spice-gtk/ChangeLog,v 1.89 2014/10/11 15:54:20 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/spice-gtk/ChangeLog,v 1.90 2014/12/28 18:00:09 floppym Exp $
+
+  28 Dec 2014; Mike Gilbert <floppym@gentoo.org> spice-gtk-0.20-r1.ebuild,
+  spice-gtk-0.21.ebuild:
+  Drop PYTHON_DEPEND, bug 533814.
 
   11 Oct 2014; Tobias Klausmann <klausman@gentoo.org> spice-gtk-0.25-r1.ebuild:
   Keyworded on alpha, bug 513108
